# MAS-004_VJ3350-Ultimate-Bridge

./: README.md  pyproject.toml
mas004_vj3350_ultimate_bridge/: __init__.py  __main__.py  client.py  config.py  protocol.py  service.py
scripts/: config.example.json  default_config.json  install.sh  run.sh
systemd/: mas004-vj3350-ultimate-bridge.service
